<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways"
           android:id="@+id/toolbar"
            app:title="@string/app_name" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:text="@string/postal_zip_code"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:hint="@string/enter_postal_code"
                android:inputType="number"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:backgroundTint="#edeff2"
                android:text="@string/submit" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10sp">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="60sp"
                        android:layout_height="60sp"
                        android:contentDescription="@string/weather" />


                    <TextView
                        android:id="@+id/label_country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/image"
                        android:padding="5sp"
                        android:text="@string/c"
                        android:textColor="#000"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@id/label_country"
                        android:layout_marginStart="50sp"
                        android:layout_toEndOf="@id/label_country" />

                    <TextView
                        android:id="@+id/label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/label_country"
                        android:layout_toEndOf="@id/image"
                        android:padding="5sp"
                        android:text="@string/city"
                        android:textColor="#000"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@id/label"
                        android:layout_marginStart="50sp"
                        android:layout_toEndOf="@id/label" />

                    <TextView
                        android:id="@+id/label_long"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/label"
                        android:layout_toEndOf="@id/image"
                        android:padding="5sp"
                        android:text="@string/lon"
                        android:textColor="#000"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@id/label_long"
                        android:layout_marginStart="50sp"
                        android:layout_toEndOf="@id/label_long" />

                    <TextView
                        android:id="@+id/label_lat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/label_long"
                        android:layout_toEndOf="@id/image"
                        android:padding="5sp"
                        android:text="@string/lat"
                        android:textColor="#000"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@id/label_lat"
                        android:layout_marginStart="50sp"
                        android:layout_toEndOf="@id/label_lat" />


                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10sp">


                    <TextView
                        android:id="@+id/temp_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5sp"
                        android:text="@string/temp"
                        android:textColor="#000"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@id/temp_label"
                        android:layout_marginStart="50sp"
                        android:layout_toEndOf="@id/temp_label" />

                    <TextView
                        android:id="@+id/label_press"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/temp_label"
                        android:padding="5sp"
                        android:text="@string/pressure"
                        android:textColor="#000"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/press"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@id/label_press"
                        android:layout_marginStart="50sp"
                        android:layout_toEndOf="@id/label_press" />

                    <TextView
                        android:id="@+id/label_humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/label_press"
                        android:padding="5sp"
                        android:text="@string/humidity"
                        android:textColor="#000"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/hum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@id/label_humidity"
                        android:layout_marginStart="50sp"
                        android:layout_toEndOf="@id/label_humidity" />

                    <TextView
                        android:id="@+id/label_vis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/label_humidity"
                        android:padding="5sp"
                        android:text="@string/vi"
                        android:textColor="#000"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/vis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@id/label_vis"
                        android:layout_marginStart="50sp"
                        android:layout_toEndOf="@id/label_vis" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:layout_marginTop="10sp"
                android:text="@string/weather_conditions"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold" />
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10sp">


                    <TextView
                        android:id="@+id/label_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5sp"
                        android:text="@string/type"
                        android:textColor="#000"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50sp"
                        android:layout_toEndOf="@id/label_desc" />

                    <TextView
                        android:id="@+id/label_weather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/label_desc"
                        android:padding="5sp"
                        android:text="@string/description"
                        android:textColor="#000"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/weather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@id/label_weather"
                        android:layout_marginStart="50sp"
                        android:layout_toEndOf="@id/label_weather" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10sp">


                    <TextView
                        android:id="@+id/label_wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5sp"
                        android:text="@string/wind_speed_m_s"
                        android:textColor="#000"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50sp"
                        android:layout_toEndOf="@id/label_wind" />

                    <TextView
                        android:id="@+id/label_sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/label_wind"
                        android:padding="5sp"
                        android:text="@string/sunrise"
                        android:textColor="#000"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@id/label_sunrise"
                        android:layout_marginStart="50sp"
                        android:layout_toEndOf="@id/label_sunrise" />

                    <TextView
                        android:id="@+id/label_sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/label_sunrise"
                        android:padding="5sp"
                        android:text="@string/sun"
                        android:textColor="#000"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@id/label_sunset"
                        android:layout_marginStart="50sp"
                        android:layout_toEndOf="@id/label_sunset" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>