<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10sp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="60sp"
                android:layout_height="60sp" />

            <TextView
                android:id="@+id/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/image"
                android:padding="5sp"
                android:text="@string/city"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/label"
                android:layout_marginStart="50sp"
                android:layout_toEndOf="@id/label" />

            <TextView
                android:id="@+id/label_long"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/label"
                android:layout_toEndOf="@id/image"
                android:padding="5sp"
                android:text="@string/lon"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/label_long"
                android:layout_marginStart="50sp"
                android:layout_toEndOf="@id/label_long" />

            <TextView
                android:id="@+id/label_lat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_long"
                android:layout_toEndOf="@id/image"
                android:padding="5sp"
                android:text="@string/lat"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/label_lat"
                android:layout_marginStart="50sp"
                android:layout_toEndOf="@id/label_lat" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10sp">


            <TextView
                android:id="@+id/temp_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:text="@string/temp"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/temp_label"
                android:layout_marginStart="50sp"
                android:layout_toEndOf="@id/temp_label" />

            <TextView
                android:id="@+id/label_press"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/temp_label"
                android:padding="5sp"
                android:text="@string/pressure"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/press"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/label_press"
                android:layout_marginStart="50sp"
                android:layout_toEndOf="@id/label_press" />

            <TextView
                android:id="@+id/label_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_press"
                android:padding="5sp"
                android:text="@string/humidity"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/label_humidity"
                android:layout_marginStart="50sp"
                android:layout_toEndOf="@id/label_humidity" />
            <TextView
                android:id="@+id/label_vis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_humidity"
                android:padding="5sp"
                android:text="@string/vi"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/label_vis"
                android:layout_marginStart="50sp"
                android:layout_toEndOf="@id/label_vis" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10sp">


            <TextView
                android:id="@+id/label_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:text="@string/type"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50sp"
                android:layout_toEndOf="@id/label_desc" />
            <TextView
                android:id="@+id/label_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_desc"
                android:padding="5sp"
                android:text="@string/description"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/label_weather"
                android:layout_marginStart="50sp"
                android:layout_toEndOf="@id/label_weather" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</merge>